[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/ralph",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }

# workspace crates
ui = { path = "packages/ui" }
api = { path = "packages/api" }
ralph = { path = "packages/ralph" }
